[package]
name = "rust-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Leonardo Saads"]
description = "A sample project with wasm-pack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"